# scansci-pdf

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: science_login.py
skill/: SKILL.md
src/scansci_pdf/: __init__.py  auth.py  browser_cookies.py  browser_engine.py  browser_login.py  camofox.py  camofox_login.py  cli.py  config.py  identifiers.py  main.py  pdf_utils.py  publisher_batch.py  publisher_strategies.py  remote_assist.py  schools.py  search.py  server.py  web.py
src/scansci_pdf/data/: publisher_carsi.json
src/scansci_pdf/sources/: __init__.py  arxiv.py  carsi.py  carsi_source.py  ezproxy.py  flaresolverr.py  openalex.py  publishers.py  scihub.py  scoring.py  vpnsci.py
tests/: test_sso_publishers.py
