[project]
name = "scansci-pdf"
version = "1.5.0"
description = "MCP server for academic paper downloading with Sci-Hub, OA sources, multi-university WebVPN, and Tor support"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "requests[socks]>=2.31",
    "beautifulsoup4>=4.12",
    "mcp[cli]>=1.12",
    "typer>=0.15",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
fast = ["lxml>=4.9"]
vpnsci = ["pycryptodome>=3.20", "selenium>=4.15"]
cloakbrowser = ["cloakbrowser>=0.3"]
dev = ["pytest>=8.0"]
compile = ["cython>=3.0"]

[project.scripts]
scansci-pdf = "scansci_pdf.main:main"

[build-system]
requires = ["setuptools>=68.0", "pycryptodome>=3.20"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scansci_pdf = ["data/*.json", "data/*.dat", "_core/*.pyd", "_core/*.so"]
